fix: fixed missing background color around form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 @layer base {
+  html,
+  body{
+    height: 100%;
+  }
+
   .box-shadow-tooltip {
     box-shadow: 0px 2px 4px 0px rgba(30, 41, 59, 0.25);
   }
